Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22461

QSettings: If the string ends with trailing whitespace then it should be preserved and not stripped off

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 4.7.4, 4.8.x, 5.3.2
    • Core: I/O
    • None
    • Windows
    • e66a878838f17a0626b0b10b340b1ca4dba56cc1

      QSettings: If the string ends with trailing whitespace then it should be preserved and not stripped off as this would keep it in line with how Windows handles this situation. When a string is written with a \t at the end then Windows writes it as a tab. Whereas Qt will cause this to be stripped off instead.

      Granted this would be a big change for Qt 4.8, but should be considered for Qt 5.0.

        For Gerrit Dashboard: QTBUG-22461
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes