src/corelib/io/qsettings.cpp
@@ -774,11 +774,11 @@ void QSettingsPrivate::iniEscapedString(const QString &str, QByteArray &result, 
     }
 }
 
-inline static void iniChopTrailingSpaces(QString &str)
+inline static void iniChopTrailingSpaces(QString &str, int limit)
 {
     int n = str.size() - 1;
     QChar ch;
-    while (n >= 0 && ((ch = str.at(n)) == QLatin1Char(' ') || ch == QLatin1Char('\t')))
+    while (n >= limit && ((ch = str.at(n)) == QLatin1Char(' ') || ch == QLatin1Char('\t')))
         str.truncate(n--);
 }
 
@@ -836,6 +836,7 @@ StSkipSpaces:
     // fallthrough
 
 StNormal:
+    int chopLimit = stringResult.length();
     while (i < to) {
         switch (str.at(i)) {
         case '\\':
@@ -873,6 +874,7 @@ StNormal:
             } else {
                 // the character is skipped
             }
+            chopLimit = stringResult.length();
             break;
         case '"':
             ++i;
@@ -884,7 +886,7 @@ StNormal:
         case ',':
             if (!inQuotedString) {
                 if (!currentValueIsQuoted)
-                    iniChopTrailingSpaces(stringResult);
+                    iniChopTrailingSpaces(stringResult, chopLimit);
                 if (!isStringList) {
                     isStringList = true;
                     stringListResult.clear();
@@ -924,6 +926,8 @@ StNormal:
         }
         }
     }
+    if (!currentValueIsQuoted)
+        iniChopTrailingSpaces(stringResult, chopLimit);
     goto end;
 
 StHexEscape:
@@ -963,8 +967,6 @@ StOctEscape:
     }
 
 end:
-    if (!currentValueIsQuoted)
-        iniChopTrailingSpaces(stringResult);
     if (isStringList)
         stringListResult.append(stringResult);
     return isStringList;
